--- a/aws/PAS-AIO-DR-template.yaml
+++ b/aws/PAS-AIO-DR-template.yaml
@@ -21,12 +21,6 @@ Resources:
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: 'VaultMachine/VaultPostInstallLog'
-  VaultCfnInitLogStream:
-    Type: AWS::Logs::LogStream
-    Properties: 
-      LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: 'ComponentMachine/CfnInitLog'
-    DeletionPolicy: Retain
   VaultDRCfnInitLogStream:
     Type: 'AWS::Logs::LogStream'
     Properties:
@@ -250,46 +244,6 @@ Resources:
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
     Condition: EULACondition
-  CopyfileFromBucketLambda:
-    Type: AWS::Lambda::Function
-    Properties:
-      Description: Copy files from foreign region to local region
-      Code:
-        ZipFile: |-
-          import uuid
-          import boto3
-          import cfnresponse
-          
-          def CopyFileFromBucketToBucket(bucket, fileKey, destination, destBucket):
-            s3Client = boto3.client(''s3'')
-            copy_source = {''Bucket'': bucket,''Key'': fileKey}
-            s3Client.copy_object(CopySource=copy_source, Bucket=destBucket, Key=destination)  
-          def DeleteObjectFromBucket(bucket, key):
-            s3Client = boto3.client(''s3'')
-            s3Client.delete_object(Bucket=bucket, Key=key)
-          
-          def lambda_handler(event, context):
-              physicalResourceId = str(uuid.uuid4())
-              if ''PhysicalResourceId'' in event:
-                physicalResourceId = event[''PhysicalResourceId'']
-          
-              try:
-                if event[''RequestType''] == ''Delete'':
-                  DeleteObjectFromBucket(event[''ResourceProperties''][''DestBucket''],event[''ResourceProperties''][''FileKey''])
-                  print ''Object Deleted Successfully''
-                  return cfnresponse.send(event, context, cfnresponse.SUCCESS,{}, physicalResourceId)
-          
-                if event[''RequestType''] == ''Create'':
-                  CopyFileFromBucketToBucket(event['ResourceProperties']['BucketName'],event['ResourceProperties']['FileKey'],event['ResourceProperties']['FileName'],event['ResourceProperties']['DestBucket'])
-                  print ''file copied successfully''
-                  return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
-          
-              except Exception as E:
-                  print E
-                  return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)'
-      Runtime: python2.7
-      Handler: index.lambda_handler
-      Role: !GetAtt 'LambdaDeployRole.Arn'
   StoreMasterPassword:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
@@ -370,10 +324,10 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSM
             - configServices
             - configSignal
-        configSSMAndHostname:
+        configSSM:
           files:
             C:\CyberArk\Deployment\KMSPolicy.json:
               content:
@@ -440,10 +394,10 @@ Resources:
       'AWS::CloudFormation::Init':
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSM
             - configServices
             - configSignal
-        configSSMAndHostname:
+        configSSM:
           files:
             'C:\CyberArk\Deployment\KMSPolicy.json':
               content:
@@ -735,104 +689,6 @@ Resources:
             Resource: '*'
       Roles:
         - !Ref 'VaultInstancesRole'
-  VaultDRMachine:
-    Type: 'AWS::EC2::Instance'
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub '${VaultInstanceName} DR'
-      SecurityGroupIds: !Ref VaultInstanceSecurityGroups
-      SubnetId: !Ref DRInstanceSubnetId
-      ImageId: !FindInMap 
-        - RegionMap
-        - !Ref 'AWS::Region'
-        - Vault
-      InstanceType: !Ref VaultInstanceType
-      UserData: !Base64 
-        'Fn::Sub': >-
-          <script> cfn-init.exe -v -s ${AWS::StackId} -r VaultDRMachine
-          --configsets ascending --region ${AWS::Region} </script>
-      KeyName: !Ref KeyName
-      IamInstanceProfile: !Ref VaultInstancesProfile
-    Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          ascending:
-            - configSSMAndHostname
-            - configServices
-            - configSignal
-        configSSMAndHostname:
-          files:
-            'C:\CyberArk\Deployment\KMSPolicy.json':
-              content:
-                'Fn::Sub': >-
-                  {"Statement": [{"Action": ["kms:Encrypt", "kms:Decrypt"],
-                  "Resource":
-                  "arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/KMSKEYID_PLACEHOLDER",
-                  "Effect": "Allow"}]}
-          services:
-            windows:
-              AmazonSSMAgent:
-                enabled: 'true'
-                ensureRunning: 'true'
-                files:
-                  - >-
-                    C:\Program
-                    Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
-          commands:
-            1-configCloudWatch:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
-                -LogGroup ${LogGroup} -CfnInitLogStream ${VaultDRCfnInitLogStream}
-                -VaultInitLogStream ${VaultDRInitLogStream}
-                -VaultPostInstallLogStream ${VaultDRPostInstallLogStream}
-                -Region ${AWS::Region}
-              waitAfterCompletion: 10
-            2-restartSSM:
-              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: 0
-        configServices:
-          commands:
-            1-downloadLicenseRecpub:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1
-                -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey
-                ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region
-                ${AWS::Region}
-              waitAfterCompletion: 0
-            2-allowDR:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\AllowDR.ps1
-                -PrimaryVaultIP ${VaultMachine.PrivateIp}
-              waitAfterCompletion: 0
-            3-postInstall:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1
-                -SSMMasterPassParameterID ${StoreMasterPassword.SsmId}
-                -SSMAdminPassParameterID ${StoreAdminPassword.SsmId}
-                -SSMDRPassParameterID ${StoreDRPassword.SsmId} -IsPrimaryOrDR
-                "DR" -PrimaryVaultIP ${VaultMachine.PrivateIp} -LicensePath
-                "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath
-                "C:\CyberArk\Deployment\recoveryPublic.key" -Region
-                ${AWS::Region}
-              waitAfterCompletion: 0
-            4-removePermissions:
-              command: !Sub >
-                powershell.exe -File
-                C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role
-                ${VaultInstancesRole}
-              waitAfterCompletion: 0
-        configSignal:
-          commands:
-            0-signalCompletion:
-              command: !Sub >
-                cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId}
-                --resource VaultDRMachine --region ${AWS::Region}
-              waitAfterCompletion: 0
-    CreationPolicy:
-      ResourceSignal:
-        Timeout: PT20M
-    DeletionPolicy: Retain
   ComponentsMachine:
     DependsOn: 
       - VaultMachine
@@ -859,12 +715,12 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSM
             - configPVWA
             - configCPM
             - configPSM
             - configSignal
-        configSSMAndHostname:
+        configSSM:
           services:
             windows:
               AmazonSSMAgent:
@@ -974,11 +830,11 @@ Resources:
               waitAfterCompletion: '0'
         configSignal:  
           commands:
-            98-SignalCompletion:
-              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
-            99-restart:
+            98-restart:
               command: powershell.exe -Command "Restart-Computer -Force"
               waitAfterCompletion: forever  
+            99-SignalCompletion:
+              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
     CreationPolicy:
       ResourceSignal:
         Timeout: PT20M
