--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -721,13 +721,12 @@ Resources:
               command: powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1 -Component "PVWA" -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
               waitAfterCompletion: '0'
             102-configuration:
-              command: !Join
-                - ' ' 
-                - 
-                  - powershell.exe -File
-                  - C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
-                  - !GetAtt 'VaultMachine.PrivateIp'
-                  - -VaultAdminUser "Administrator" -VaultPort 1858 -HostName "PVWAhost"
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858 -HostName "PVWAhost"
+                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
               waitAfterCompletion: '0'
             103-registration:
               command: !Sub >
@@ -749,12 +748,12 @@ Resources:
         configCPM:  
           commands:
             201-configuration:
-              command: !Join
-                - ' ' 
-                - 
-                  - powershell.exe -File C:\CyberArk\Deployment\CPMConfiguration.ps1 -VaultIpAddress
-                  - !GetAtt 'VaultMachine.PrivateIp'
-                  - -VaultAdminUser "Administrator" -VaultPort 1858
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\CPMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858
+                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
               waitAfterCompletion: '0'
             202-registration:
               command: !Sub >
@@ -777,12 +776,12 @@ Resources:
         configPSM:  
           commands:
             301-configuration:
-              command: !Join
-                - ' ' 
-                -  
-                  - powershell.exe -File C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
-                  - !GetAtt 'VaultMachine.PrivateIp' 
-                  - -VaultAdminUser "Administrator" -VaultPort 1858
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858
+                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
               waitAfterCompletion: '0'
             303-registration:
               command: !Sub >
@@ -939,16 +938,19 @@ Metadata:
           - LicenseFile
           - RecoveryPublicKey
       - Label:
-          default: Vault Configuration
+          default: Vault and DR Configuration
         Parameters:
           - VaultInstanceName
           - VaultMasterPassword
           - RetypeMasterPassword
           - VaultAdminPassword
           - RetypeAdminPassword
+          - VaultDRPassword
+          - RetypeDRPassword
           - VaultInstanceType
           - VaultInstanceSecurityGroups
           - VaultInstanceSubnetId
+          - DRInstanceSubnetId
       - Label:
           default: Components Configuration
         Parameters:
@@ -978,15 +980,17 @@ Metadata:
       RetypeAdminPassword:
         default: Retype Admin Password
       VaultDRPassword:
-        default: DR Password
+        default: Vault DR Password
       RetypeDRPassword:
-        default: Retype DR Password
+        default: Retype Vault DR Password
       VaultInstanceType:
         default: Vault Instance Type
       VaultInstanceSecurityGroups:
         default: Vault Instance Security Groups
       VaultInstanceSubnetId:
         default: Vault Instance Subnet Id
+      DRInstanceSubnetId:
+        default: Vault DR Instance Subnet Id
       ComponentsInstanceName:
         default: Components Instance Name
       ComponentsInstanceType:
