--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -407,6 +407,10 @@ Parameters:
   VaultInstanceSubnetId:
     Type: AWS::EC2::Subnet::Id
     Description: Select the Subnet Id where the Vault instance will reside.
+  Secret:
+    Type: String
+    Description: Enter a Secret for DR registration(Optional).
+    NoEcho: true
 Rules:
   PasswordConfirmation:
     Assertions:
@@ -447,6 +451,7 @@ Metadata:
           - VaultInstanceType
           - VaultInstanceSecurityGroups
           - VaultInstanceSubnetId
+          - Secret
     ParameterLabels:
       EULA:
         default: License Agreement
@@ -475,7 +480,9 @@ Metadata:
       VaultInstanceSecurityGroups:
         default: Vault Instance Security Groups
       VaultInstanceSubnetId:
-        default: Vault Instance Subnet Id
+        default: Vault Instance Subnet Id\
+      Secret:
+        default: Secret for DR registration
 Mappings:
   RegionMap:
     us-east-1:
