--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -143,8 +143,8 @@ Resources:
                   - s3:DeleteObject
                   - s3:DeleteObjectVersion
                 Resource:
-                  - !Sub 'arn:aws:s3:::${DeployBucket}/*'
-                  - !Sub 'arn:aws:s3:::${VaultFilesBucket}/*'
+                  - !Sub 'arn:${AWS::Partition}:s3:::${DeployBucket}/*'
+                  - !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket}/*'
     Condition: EULACondition
   LambdaLogDenyRole:
     Type: AWS::IAM::Role
